Add even more content

--- a/index.html
+++ b/index.html
@@ -10,8 +10,31 @@
     <title>Marvel Character Build</title>
 </head>
 <body>
-    <header class="some-class">
-        <img src="images/logo.svg" alt="marvel logo" id="some-img">
+    <header>
+        <h1 class="hidden">All About the Team</h1>
+        <img src="images/logo.svg" alt="marvel logo" id="main-logo">
     </header>
+
+    <main>
+        <nav id="character_nav">
+            <ul class="characters">
+                <li><img src="images/cap.jpeg" alt="captain america" ></li>
+                <li><img src="images/carol.jpeg" alt="captain marvel" ></li>
+                <li><img src="images/clint.jpeg" alt="hawkeye" ></li>
+                <li><img src="images/hulk.jpeg" alt="the incredible hulk" ></li>
+                <li><img src="images/thor.jpeg" alt="thor" ></li>
+                <li><img src="images/widow.jpeg" alt="black widow" ></li>
+            </ul>
+        </nav>
+
+        <article>
+            <h3>Choose your Hero!</h3>
+            <p>Use your mouse to hover / Click to discover more about each Marvel hero</p>
+        </article>
+    </main>
+
+    <footer class="sticky_footer">
+        <h3>All Images &copy; Marvel</h3>
+    </footer>
 </body>
 </html>
